Basic spring security config with JWT
