# src/main/java/com/maik/ApiPostgresTemplate/exceptions/ExceptionController.java
@@ -1,7 +1,9 @@
 package com.maik.ApiPostgresTemplate.exceptions;
 
+import com.maik.ApiPostgresTemplate.models.dto.ErrorDTO;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.authentication.BadCredentialsException;
 import org.springframework.web.bind.MissingServletRequestParameterException;
 import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
@@ -67,5 +69,16 @@ public class ExceptionController {
 		return new ResponseEntity<>(error, HttpStatus.BAD_REQUEST);
 
 	}
+	@ExceptionHandler({BadCredentialsException.class})
+	public ResponseEntity<ErrorDTO> badCredentialsException(BadCredentialsException e) {
+
+		ErrorDTO errorDTO = new ErrorDTO();
+		errorDTO.setCode(HttpStatus.UNAUTHORIZED.toString());
+		errorDTO.setError("Invalid credentials");
+
+		return new ResponseEntity<>(errorDTO, HttpStatus.UNAUTHORIZED);
+
+	}
+
 
 }
