# src/main/java/com/maik/ApiPostgresTemplate/web/PetsDelegateImpl.java
@@ -1,0 +1,27 @@
+package com.maik.ApiPostgresTemplate.web;
+
+import com.maik.ApiPostgresTemplate.api.PetsApiDelegate;
+import com.maik.ApiPostgresTemplate.domain.entities.Pet;
+import com.maik.ApiPostgresTemplate.domain.repositories.PetRepository;
+import com.maik.ApiPostgresTemplate.domain.services.interfaces.PetService;
+import com.maik.ApiPostgresTemplate.models.dto.PetDTO;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.ResponseEntity;
+import org.springframework.stereotype.Component;
+
+import java.util.List;
+
+@Slf4j
+@Component
+@RequiredArgsConstructor(onConstructor = @__(@Autowired))
+public class PetsDelegateImpl implements PetsApiDelegate {
+
+    private final PetService petService;
+
+    @Override
+    public ResponseEntity<List<PetDTO>> findAllPets() {
+        return ResponseEntity.ok(petService.findAll());
+    }
+}
